--- a/src/app/heroes-list/heroes-list.component.html
+++ b/src/app/heroes-list/heroes-list.component.html
@@ -1,8 +1,19 @@
 <h3>heroes-list</h3>
-<div>
-<ul>
-  <li *ngFor="let hero of heroes" (click)="onSelectedHero(hero)">
+
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero === selectedHero">
     <span class="badge">{{hero.id}}</span>{{hero.name}}
   </li>
 </ul>
+
+<div *ngIf="selectedHero">
+
+  <h2>{{selectedHero.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{selectedHero.id}}</div>
+  <div>
+    <label>name:
+      <input [(ngModel)]="selectedHero.name" placeholder="name"/>
+    </label>
+  </div>
+
 </div>
