--- a/src/app/heroes-details/heroes-details.component.html
+++ b/src/app/heroes-details/heroes-details.component.html
@@ -1,12 +1,11 @@
-<h3>
-{{hero.name | uppercase}} - Details
-</h3>
-<div>
-  <label for="Id">Id:
-  </label>    
-  <span>{{hero.id}}</span>
+<div *ngIf="hero">
+
+  <h2>{{hero.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{hero.id}}</div>
+  <div>
+    <label>name:
+      <input [(ngModel)]="hero.name" placeholder="name"/>
+    </label>
   </div>
-  <div><label for="name">name:</label>
-    <input type="text" placeholder="name" [(ngModel)]="hero.name">
-  </div>
-  <div><button>Back </button></div>
+
+</div>
